:see_no_evil: Update ignore - yaml

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build/
 !**/src/test/**/build/
 
 ### for external properties ###
+**/src/main/java/resources/yaml/
 application-keys.yaml
 
 ### STS ###
